syntax = "proto3";

option go_package = "github.com/LagrangeDev/LagrangeGo/client/packets/pb/service/oidb";

// Get Offline File Download
message OidbSvcTrpcTcp0xE37_800 {
  uint32 SubCommand = 1;
  int32 Field2 = 2;
  OidbSvcTrpcTcp0xE37_800Body Body = 10;
  int32 Field101 = 101;
  int32 Field102 = 102;
  int32 Field200 = 200;
}

message OidbSvcTrpcTcp0xE37_800Body {
  string SenderUid = 10;
  string ReceiverUid = 20;
  string FileUuid = 30;
  string FileHash = 40;
}

message OidbSvcTrpcTcp0xE37Response {
  uint32 Command = 1;
  int32 Seq = 2;
  ApplyUploadRespV3 Upload = 19;
  int32 BusinessId = 101;
  int32 ClientType = 102;
  int32 FlagSupportMediaPlatform = 200;
}

message ApplyUploadRespV3 {
  int32 RetCode = 10;
  string RetMsg = 20;
  int64 TotalSpace = 30;
  int64 UsedSpace = 40;
  int64 UploadedSize = 50;
  string UploadIp = 60;
  string UploadDomain = 70;
  uint32 UploadPort = 80;
  string Uuid = 90;
  bytes UploadKey = 100;
  bool BoolFileExist = 110;
  int32 PackSize = 120;
  repeated string UploadIpList = 130;
  int32 UploadHttpsPort = 140;
  string UploadHttpsDomain = 150;
  string UploadDns = 160;
  string UploadLanip = 170;
  string FileAddon = 200;
  bytes MediaPlatformUploadKey = 220;
}
